working on social solutions

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!-- I will make you feel worse -->
       <div class="consideration-element consideration-holder">
         <p class="h1">
-          <span class="the-considerations">Really?</span>
+          <span class="the-considerations"></span>
         </p>
 
         <div class="evidence-card">
@@ -165,16 +165,16 @@
 
             <span class="evidence-span evidence-a">
               <strong><span class="percent">8</span>%</strong>
-              of people agree: when meeting someone <span class="evidence-a-detail">on a first date</span>, one of the <strong>first things</strong> they notice is the other person&rsquo;s
-              <span class="the-problem-part reset"></span>.
+              of people reported: when meeting someone <span class="evidence-a-detail">on a first date</span>, one of the <strong>first things</strong> they notice is the other person&rsquo;s
+              <span class="the-problem-part-evidence-a reset">part</span>.
             </span>
 
             <span class="evidence-span evidence-b">
-              people with undesirable <span class="the-problem-part-plural reset"></span> are <strong><span class="percent">8</span>%</strong> <span class="evidence-b-detail">less likely to be offered jobs</span>.</span>
+              people with <span class="the-evidence-adjective"></span> <span class="the-problem-part-plural reset"></span> are <strong><span class="percent">8</span>%</strong> <span class="evidence-b-detail">less likely to be offered jobs</span>.</span>
             </p>
           </p>
         </div>
-        <p class="fine-print">*not peer reviewed.</p>
+        <p class="fine-print">*not peer reviewed</p>
 
       </div> <!-- consideration holder -->
 
@@ -188,7 +188,7 @@
 
         <div class="solution-statement">
           <p>
-            <span class="solution-intro">Then you need our</span>
+            <span class="solution-intro">You need our</span>
           </p>
           <p class="h1">
             <span class="the-solution-adjective-one reset"></span>
