working on colors

--- a/index.html
+++ b/index.html
@@ -185,21 +185,25 @@
       <!-- Nothing that capitalism can't solve, yo! -->
       <div class="solution-element solution-statement-holder">
 
-        <div class="solution-statement">
-          <p class="solution-intro">You need our</p>
-          <p class="h1">
-            <span class="the-solution-adjective-one reset"></span>
-            <span class="the-solution-adjective-two reset"></span>
-            <span class="the-problem-part-singular reset"></span>
-            <span class="the-solution-noun reset"></span>!
-          </p>
+        <p class="solution-intro">You need our</p>
+
+        <div class="solution-card">
+          <div class="solution-statement">
+            <p class="h1">
+              <span class="the-solution-adjective-one reset"></span>
+              <span class="the-solution-adjective-two reset"></span>
+              <span class="the-problem-part-singular reset"></span>
+              <span class="the-solution-noun reset"></span>!
+            </p>
+          </div>
+
+          <div class="follow-up">
+            <p>
+              <span class="the-follow-up"></span>
+            </p>
+          </div>
         </div>
 
-        <div class="follow-up">
-          <p>
-            <span class="the-follow-up"></span>
-          </p>
-        </div>
       </div> <!-- solution holder -->
 
 
@@ -223,7 +227,7 @@
       </div>
 
       <div class="button-set solution-element again-buttons">
-        <button class="share">Share this!</button>
+        <div class="addthis_inline_share_toolbox_uo1i"></div>
         <a class="reset-button" href="#">Get fixed again</a>
       </div>
 
@@ -236,6 +240,10 @@
 
 	<!-- LINKED JS -->
 	<script src="js/vendor/jquery.js"></script>
+
+  <!-- share buttons -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5321f52a685b0152"></script>
+
 	<script src="js/scripts.js"></script>
   <script src="js/bodyparts.js"></script>
   <script src="js/problems.js"></script>
