--- a/index.html
+++ b/index.html
@@ -30,18 +30,17 @@
 
   <!-- Metatags -->
   <meta property="og:title" content="Problem Bodies" />
-  <meta property="og:url" content="http://laurenhallden.com/problembodies" />
+  <meta property="og:url" content="https://laurenhallden.com/problembodies" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="A site that knows exactly what's wrong with your body, and how to fix it" />
-  <!--<meta property="og:image" content="http://laurenhallden.com/REPLACETHIS.jpg" />-->
+  <meta property="og:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Problem Bodies" />
   <meta name="tiwtter:creator" content="@phillylauren" />
   <meta name="twitter:description" content="A site that knows exactly what's wrong with your body, and how to fix it" />
-  <meta name="twitter:url" content="http://laurenhallden.com/problembodies" />
-  <meta name="twitter:image" content="http://laurenhallden.com/REPLACETHIS.jpg" />
-
+  <meta name="twitter:url" content="https://laurenhallden.com/problembodies" />
+  <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="stylesheets/screen.css" />
