--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="stylesheets/screen.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
