more mobile styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/screen.css" />
+  <link rel="stylesheet" href="stylesheets/screen1.css" />
   <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
