--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/screen1.css" />
+  <link rel="stylesheet" href="stylesheets/screen13.css" />
   <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
@@ -225,7 +225,7 @@
       </div>
 
       <div class="button-set solution-element again-buttons">
-        <div class="addthis_inline_share_toolbox_uo1i"></div>
+        Share your results: <div class="addthis_inline_share_toolbox_uo1i"></div>
         <a class="reset-button" href="#">Get fixed again</a>
       </div>
 
