fixing u some js

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <script src="js/solutions.js"></script>
   <script src="js/emotions.js"></script>
   <script src="js/considerations.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main2.js"></script>
 
   <script>
 
