--- a/index.html
+++ b/index.html
@@ -240,7 +240,6 @@
 	<script src="js/vendor/jquery.js"></script>
 
   <!-- share buttons -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5321f52a685b0152"></script>
 
 	<script src="js/scripts.js"></script>
   <script src="js/bodyparts.js"></script>
@@ -248,7 +247,9 @@
   <script src="js/solutions.js"></script>
   <script src="js/emotions.js"></script>
   <script src="js/considerations.js"></script>
-  <script src="js/main2.js"></script>
+  <script src="js/main.js"></script>
+
+   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5321f52a685b0152"></script>
 
   <script>
 
@@ -298,6 +299,11 @@
         });
       }
     });
+
+    // update the content that populates our social share buttons
+    function updateSocial() {
+      addthis.update('share', 'title', newTitle.title);
+    }
 
     $('.reset-button').click(function() {
       $('.again-element').hide();
