adding fixed again button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/screen13.css" />
+  <link rel="stylesheet" href="stylesheets/screen14.css" />
   <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
@@ -225,7 +225,8 @@
       </div>
 
       <div class="button-set solution-element again-buttons">
-        Share your results: <div class="addthis_inline_share_toolbox_uo1i"></div>
+        <p>Share your results:</p>
+        <div class="addthis_inline_share_toolbox_uo1i"></div>
         <a class="reset-button" href="#">Get fixed again</a>
       </div>
 
@@ -302,7 +303,7 @@
 
     // update the content that populates our social share buttons
     function updateSocial() {
-      addthis.update('share', 'title', newTitle.title);
+     // addthis.update('share', 'title', newTitle.title);
     }
 
     $('.reset-button').click(function() {
