adding button focus states

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="button-set solution-element again-buttons">
         <p>Share your results:</p>
         <div class="addthis_inline_share_toolbox_uo1i"></div>
-        <a class="reset-button" href="#">Get fixed again</a>
+        <a class="reset-button" href="#">⬅ Get fixed again</a>
       </div>
 
     </section> <!-- buttons section-->
