adding help tag

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 	</div> <!-- end wrapper -->
 
-  <div class="tooltip"><img src="images/help.svg" /></div>
+  <div class="tooltip"><img src="images/help.svg" alt="help icon"/></div>
   <div class="credits">Made as a joke&mdash;or really, a cirtique of the beauty industry&mdash;by <a href="/" title="Lauren Hallden, Designer">Lauren Hallden</a>. Don't let 'em create problems where none exist.</div>
 
 	<!-- LINKED JS -->
