--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/screen19.css" />
+  <link rel="stylesheet" href="stylesheets/screen21.css" />
   <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
@@ -240,7 +240,7 @@
   </div>
 
   <div class="tooltip"><img src="images/help.svg" alt="help icon"/></div>
-  <div class="credits">Made as a joke&mdash;or really, a cirtique of the beauty industry&mdash;by <a href="/" title="Lauren Hallden, Designer">Lauren Hallden</a>. Don't let 'em create problems where none exist.</div>
+  <div class="credits">Made as a joke&mdash;or really, a critique of the beauty industry&mdash;by <a href="/" title="Lauren Hallden, Designer">Lauren Hallden</a>. Don't let 'em create problems where none exist.</div>
 
 	<!-- LINKED JS -->
 	<script src="js/vendor/jquery.js"></script>
@@ -310,7 +310,7 @@
 
     // update the content that populates our social share buttons
     function updateSocial() {
-      //addthis.update('share', 'title', newTitle.title);
+      addthis.update('share', 'title', newTitle.title);
     };
 
     $('.reset-button').click(function() {
