shoulder blades are not singular

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
     // update the content that populates our social share buttons
     function updateSocial() {
-      addthis.update('share', 'title', newTitle.title);
+     // addthis.update('share', 'title', newTitle.title);
     };
 
     $('.reset-button').click(function() {
