changing share message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta name="twitter:image" content="https://laurenhallden.com/problembodies/images/social_card.png" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/screen21.css" />
+  <link rel="stylesheet" href="stylesheets/screen22.css" />
   <link rel="stylesheet" href="https://use.typekit.net/aza3xeo.css">
 
   <!--[if lt IE 9]>
@@ -310,7 +310,7 @@
 
     // update the content that populates our social share buttons
     function updateSocial() {
-     // addthis.update('share', 'title', newTitle.title);
+      addthis.update('share', 'title', newTitle.title);
     };
 
     $('.reset-button').click(function() {
